# sweeper

./: .gitignore  Makefile  README.md  documentation.md  jobs.db  jobs.toml  pytest.ini  requirements-all.txt  requirements.txt  setup.cfg  sync.py
datagateway/backends/: base.py  metadata.py
datagateway/backends/sirene/: sirene.py
datagateway/gateways/: datagouvfr.py  http.py  ssh.py
datagateway/utils/: progress.py
docs/sweeper/: index.html  models.html  sync.html
docs/sweeper/gateways/: datagouvfr.html  http.html  index.html  s3.html  ssh.html
docs/sweeper/pipelines/: base.html  index.html  sirene.html
docs/sweeper/tests/: conftest.html  index.html  test_cli.html  test_gateways.html  test_pipelines.html
docs/sweeper/tests/pipelines/: index.html  pipeline_test.html
docs/sweeper/utils/: config.html  index.html  metadata.html  progress.html
sweeper/: __init__.py  models.py  sync.py
sweeper/backends/: base.py  metadata.py  sirene.py
sweeper/backends/sirene/: requirements.txt  sirene.py
sweeper/gateways/: datagouvfr.py  http.py  s3.py  ssh.py
sweeper/pipelines/: base.py  sirene.py
sweeper/tests/: conftest.py  jobs_test.toml  test_backends.py  test_cli.py  test_gateways.py  test_pipelines.py
sweeper/tests/backends/: backend.py  backend_test.py
sweeper/tests/pipelines/: pipeline_test.py
sweeper/utils/: config.py  metadata.py  progress.py
