[metadata]
name = sweeper
version = 0.1.0
description = Move data (files) around
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abulte/sweeper
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
py_modules = sweeper
python_requires = >= 3.9
install_requires =
    minicli
    requests
    toml
    dataset
    progressist
    paramiko

[options.extras_require]
test =
    pytest
sirene =
    xmltodict

[options.entry_points]
console_scripts =
    sweeper = sweeper.sync:clirun

[flake8]
max-line-length=100
